@@ -89,6 +89,7 @@ my $builder = $class->new(
                 'ExtUtils::CBuilder'              => 0,
                 'DateTime::Duration'              => 0,
                 'DateTime::Format::SQLite'        => 0,
+                'HTTP::Headers'                   => 0,
                 'IO::File'                        => 0,
                 'IPC::Open2'                      => 0,
                 'List::Util'                      => 0,
@@ -118,7 +119,7 @@ my $builder = $class->new(
                 'Class::Accessor'                 => '0.31',
                 'Class::Load'                     => 0,
                 'Class::Std'                      => '0.0.8',
-                'ClearPress'                      => '== 473.0.5',
+                'ClearPress'                      => '>= 473.3.3',
                 'Config::Auto'                    => 0,
                 'Crypt::CBC'                      => 0,
                 'Cwd'                             => 0,
