@@ -1,5 +1,7 @@
 LIST OF CHANGES
 
+ - switch to the latest (475.3.3) ClearPress version
+
 release 86.4
  - reference find role: remove unused 'subset' attribute and
    previously deprecated 'single_ref_found' method 
